--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan.fxml
@@ -443,16 +443,16 @@
                            <graphic>
                               <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../images/icons/reset-removebg-preview.png" />
+                                    <Image url="@images/icons/reset-removebg-preview.png" />
                                  </image>
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button fx:id="btnLuu" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Lưu">
+                        <Button fx:id="btnLuu" mnemonicParsing="false" onAction="#LuuDSPhanCong" prefHeight="30.0" prefWidth="94.0" text="Lưu">
                            <graphic>
                               <ImageView fx:id="btnLuuPhanCongCongNhan" fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../images/icons/save.png" />
+                                    <Image url="@images/icons/save.png" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -469,25 +469,24 @@
                         <SplitPane dividerPositions="0.5, 0.5" maxHeight="200.0">
                            <items>
                               <TableView fx:id="tblViewTTSanPhamPhanCongCongNhan" maxWidth="-Infinity" minWidth="-Infinity" onMouseClicked="#chonROWTTChiTietSanPham">
-                                <columns>
+                                 <columns>
                                     <TableColumn fx:id="colMaSanPhamPhanCongCongNhan1" prefWidth="125.59996949434299" text="Mã sản phẩm" />
-                                  <TableColumn fx:id="colTenSanPhamPhanCongCongNhan" prefWidth="128.80001831054688" text="Tên sản phẩm" />
-                                  <TableColumn fx:id="colSLSanPhamPhanCongCongNhan" prefWidth="110.4000183105469" text="Số lượng làm" />
-                                </columns>
+                                    <TableColumn fx:id="colTenSanPhamPhanCongCongNhan" prefWidth="252.80001831054688" text="Tên sản phẩm" />
+                                    <TableColumn fx:id="colSLSanPhamPhanCongCongNhan" prefWidth="180.800048828125" text="Số lượng làm" />
+                                 </columns>
                               </TableView>
-                              <TableView fx:id="tblViewTTCongDoanPhanCongCongNhan" maxWidth="-Infinity" minWidth="-Infinity">
-                                <columns>
-                                  <TableColumn fx:id="colMaCongDoanPhanCongCongNhan" prefWidth="165.5999999999999" text="Mã công đoạn" />
-                                    <TableColumn fx:id="colTenSanPhamCDPhanCongCongNhan" prefWidth="245.60003662109375" text="Tên sản phẩm" />
-                                  <TableColumn fx:id="colTenCongDoanPhanCongCongNhan" minWidth="0.0" prefWidth="192.79989624023438" text="Tên công đoạn" />
-                                </columns>
+                              <TableView fx:id="tblViewTTCongDoanPhanCongCongNhan" maxWidth="-Infinity" minWidth="-Infinity" onMouseClicked="#chonROWTTCongDoanSanPham">
+                                 <columns>
+                                    <TableColumn fx:id="colMaCongDoanPhanCongCongNhan" prefWidth="211.20007934570458" text="Mã công đoạn" />
+                                    <TableColumn fx:id="colTenCongDoanPhanCongCongNhan" minWidth="0.0" prefWidth="188.7999267578125" text="Tên công đoạn" />
+                                 </columns>
                               </TableView>
-                              <TableView fx:id="tblViewTTToPhanCongCongNhan" minWidth="-Infinity">
-                                <columns>
-                                  <TableColumn fx:id="colMaToPhanCongCongNhan" prefWidth="172.00000305175854" text="Mã tổ" />
+                              <TableView fx:id="tblViewTTToPhanCongCongNhan" minWidth="-Infinity" onMouseClicked="#chonROWTTSolUongNguoiTrongTo">
+                                 <columns>
+                                    <TableColumn fx:id="colMaToPhanCongCongNhan" prefWidth="172.00000305175854" text="Mã tổ" />
                                     <TableColumn fx:id="colTenToPhanCongCongNhan" prefWidth="91.99998474121094" text="Tên tổ" />
                                     <TableColumn fx:id="colSoLuongNguoiTrongToPhanCongCongNhan" prefWidth="194.4000244140625" text="Số lượng người có trong tổ" />
-                                </columns>
+                                 </columns>
                               </TableView>
                            </items>
                         </SplitPane>
@@ -495,27 +494,45 @@
                            <children>
                               <HBox alignment="CENTER_LEFT" spacing="10.0">
                                  <children>
-                                    <Label text="Ngày phân công:" />
-                                    <DatePicker fx:id="datepickNgayPhanCong" />
+                                    <Label text="Sản phẩm:" />
+                                    <TextField fx:id="tfSanPhamPhanCong" disable="true" editable="false" prefHeight="26.0" prefWidth="131.0" />
                                  </children>
                               </HBox>
                               <HBox alignment="CENTER_LEFT" spacing="10.0">
                                  <children>
-                                    <Label text="Số lương phân công tự động cho mỗi công nhân" />
+                                    <Label text="Công đoạn:" />
+                                    <TextField fx:id="tfCongDoanPhanCong" disable="true" editable="false" prefHeight="26.0" prefWidth="122.0" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" spacing="10.0">
+                                 <children>
+                                    <Label text="Tổ :" />
+                                    <TextField fx:id="tfToPhanCong" disable="true" editable="false" prefHeight="26.0" prefWidth="54.0" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" spacing="10.0">
+                                 <children>
+                                    <Label text="Ngày phân công:" />
+                                    <DatePicker fx:id="datepickNgayPhanCong" prefHeight="26.0" prefWidth="135.0" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" spacing="10.0">
+                                 <children>
+                                    <Label text="Số lượng cho mỗi công nhân" />
                                     <TextField fx:id="tfSoLuongPhanCongTungNguoi" />
                                  </children>
                               </HBox>
                               <HBox alignment="CENTER_LEFT" spacing="10.0">
                                  <children>
                                     <Label text="Ngày kết thúc:" />
-                                    <DatePicker fx:id="datepickNgayKetThuc" />
+                                    <DatePicker fx:id="datepickNgayKetThuc" prefHeight="26.0" prefWidth="130.0" />
                                  </children>
                               </HBox>
-                              <Button mnemonicParsing="false" text="Phân công">
+                              <Button mnemonicParsing="false" onAction="#phanCongCongNhan" text="Phân công">
                                  <graphic>
                                     <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/icons/add-removebg-preview.png" />
+                                          <Image url="@images/icons/add-removebg-preview.png" />
                                        </image>
                                     </ImageView>
                                  </graphic>
@@ -523,30 +540,29 @@
                            </children>
                            <padding>
                               <Insets bottom="5.0" left="5.0" top="5.0" />
-                           </padding></HBox>
+                           </padding>
+                        </HBox>
                         <SplitPane dividerPositions="0.5">
                            <items>
                               <TableView fx:id="tblViewTTPhanCongTungCongNhan" maxWidth="-Infinity" minWidth="-Infinity">
-                                <columns>
-                                  <TableColumn fx:id="colMaChamCongTTPhanCongTungCongNhan" prefWidth="133.599969494343" text="Mã chấm công" />
-                                  <TableColumn fx:id="colNgayPhamCongChamCongTTPhanCongTungCongNhan" minWidth="0.0" prefWidth="140.00009155273438" text="Ngày phân công" />
-                                    <TableColumn fx:id="colTenSanPhamTTPhanCongTungCongNhan" prefWidth="116.79998779296875" text="Tên sản phẩm" />
-                                    <TableColumn fx:id="colTenCongDoanTTPhanCongTungCongNhan" prefWidth="117.5999755859375" text="Tên công đoạn" />
-                                    <TableColumn fx:id="colToTTPhanCongTungCongNhan" prefWidth="76.800048828125" text="Tổ" />
-                                    <TableColumn fx:id="colHovaTenTTPhanCongTungCongNhan" prefWidth="113.5999755859375" text="Họ và tên" />
-                                    <TableColumn fx:id="colSoLuongLamTTPhanCongTungCongNhan" prefWidth="140.0" text="Số lượng làm" />
-                                    <TableColumn fx:id="colNgayKetThucTTPhanCongTungCongNhan" prefWidth="122.4000244140625" text="Ngày kết thúc" />
-                                </columns>
+                                 <columns>
+                                    <TableColumn fx:id="colMaChamCongTTPhanCongTungCongNhan" prefWidth="133.599969494343" text="Mã phân công " />
+                                    <TableColumn fx:id="colNgayPhamCongChamCongTTPhanCongTungCongNhan" minWidth="0.0" prefWidth="123.99995422363281" text="Ngày phân công" />
+                                    <TableColumn fx:id="colTenSanPhamTTPhanCongTungCongNhan" prefWidth="115.199951171875" text="Tên sản phẩm" />
+                                    <TableColumn fx:id="colTenCongDoanTTPhanCongTungCongNhan" prefWidth="113.5999755859375" text="Tên công đoạn" />
+                                    <TableColumn fx:id="colHovaTenTTPhanCongTungCongNhan" prefWidth="96.79998779296875" text="Họ và tên" />
+                                    <TableColumn fx:id="colSoLuongLamTTPhanCongTungCongNhan" prefWidth="92.800048828125" text="Số lượng làm" />
+                                    <TableColumn fx:id="colNgayKetThucTTPhanCongTungCongNhan" prefWidth="134.4000244140625" text="Ngày kết thúc" />
+                                 </columns>
                               </TableView>
                               <TableView fx:id="tblViewTTPhanCongToCongNhan">
-                                <columns>
-                                  <TableColumn fx:id="colNgayPhanCongTTPhanCongToCongNhan" prefWidth="110.39990081787073" text="Ngày phân công" />
-                                  <TableColumn fx:id="colToTTPhanCongToCongNhan" prefWidth="64.80005645751953" text="Tổ" />
+                                 <columns>
+                                    <TableColumn fx:id="colToTTPhanCongToCongNhan" prefWidth="64.80005645751953" text="Tổ" />
                                     <TableColumn fx:id="colSanPhamTTPhanCongToCongNhan11" prefWidth="84.800048828125" text="Sản phẩm " />
                                     <TableColumn fx:id="colCongDoanTTPhanCongToCongNhan" prefWidth="106.39990234375" text="Công đoạn" />
                                     <TableColumn fx:id="colTongSoLuongLamTTPhanCongToCongNhan" prefWidth="175.2000732421875" text="Tổng số lượng đã phân công" />
                                     <TableColumn fx:id="colNgayKetThucTTPhanCongToCongNhan" prefWidth="143.9998779296875" text="Ngày kết thúc" />
-                                </columns>
+                                 </columns>
                               </TableView>
                            </items>
                         </SplitPane>
