--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/QuanLyCongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/QuanLyCongNhan.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -18,40 +17,39 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-    <BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.PhanCongCongNhanController">
+<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.QuanLyCongNhanController">
         <center>
             <SplitPane dividerPositions="0.5" orientation="VERTICAL" BorderPane.alignment="CENTER">
                 <items>
                     <ScrollPane fitToHeight="true" fitToWidth="true">
                         <content>
-                            <TableView editable="true" prefHeight="300.0">
+                            <TableView fx:id="tblViewTTCongNhan" editable="true" prefHeight="300.0">
                                 <columns>
-                                    <TableColumn prefWidth="133.60003048181534" text="Mã công nhân" />
-                                    <TableColumn minWidth="-1.0" prefWidth="81.59994506835938" text="Họ" />
-                                    <TableColumn minWidth="-1.0" prefWidth="257.6000061035156" text="Tên" />
-                                    <TableColumn minWidth="-1.0" prefWidth="75.199951171875" text="Giới tính" />
-                                    <TableColumn minWidth="-1.0" prefWidth="143.20001220703125" text="Chức vụ" />
-                                    <TableColumn minWidth="-1.0" prefWidth="166.4000244140625" text="Tổ sản xuất" />
+                                    <TableColumn fx:id="colMaTTCongNhan" prefWidth="133.60003048181534" text="Mã công nhân" />
+                                    <TableColumn fx:id="colHoTTCongNhan" minWidth="-1.0" prefWidth="81.59994506835938" text="Họ" />
+                                    <TableColumn fx:id="colTenTTCongNhan" minWidth="-1.0" prefWidth="257.6000061035156" text="Tên" />
+                                    <TableColumn fx:id="colGioiTinhTTCongNhan" minWidth="-1.0" prefWidth="75.199951171875" text="Giới tính" />
+                                    <TableColumn fx:id="colChucVuTTCongNhan" minWidth="-1.0" prefWidth="143.20001220703125" text="Chức vụ" />
+                                    <TableColumn fx:id="colToSanXuatTTCongNhan" minWidth="-1.0" prefWidth="166.4000244140625" text="Tổ sản xuất" />
                                 </columns>
                             </TableView>
                         </content>
                     </ScrollPane>
                     <ScrollPane fitToHeight="true" fitToWidth="true">
                         <content>
-                            <TableView editable="true" prefHeight="300.0" tableMenuButtonVisible="true">
+                            <TableView fx:id="tblViewChiTietTTCongNhan" editable="true" prefHeight="300.0" tableMenuButtonVisible="true">
                                 <columns>
-                                    <TableColumn prefWidth="96.80001217126846" text="Mã công nhân" />
-                                    <TableColumn minWidth="-1.0" prefWidth="93.60000610351562" text="Họ và tên" />
-                        <TableColumn minWidth="-1.0" prefWidth="93.60000610351562" text="Ngày sinh" />
-                                    <TableColumn minWidth="-1.0" prefWidth="64.0" text="Giới tính" />
-                                    <TableColumn minWidth="-1.0" prefWidth="98.4000244140625" text="Ngày vào làm" />
-                                    <TableColumn minWidth="-1.0" prefWidth="108.00006103515625" text="Số điện thoại" />
-                                    <TableColumn minWidth="-1.0" prefWidth="62.39996337890625" text="Email" />
-                                    <TableColumn minWidth="-1.0" prefWidth="97.5999755859375" text="Só tài khoản" />
-                                    <TableColumn minWidth="-1.0" prefWidth="84.79998779296875" text="Tổ sản xuất" />
-                                    <TableColumn minWidth="-1.0" prefWidth="64.0" text="Chức vụ" />
-                                    <TableColumn minWidth="-1.0" prefWidth="85.5999755859375" text="Phụ cấp" />
+                                    <TableColumn fx:id="colMaChiTietTTCongNhan" prefWidth="96.80001217126846" text="Mã công nhân" />
+                                    <TableColumn fx:id="colHovaTenChiTietTTCongNhan" minWidth="-1.0" prefWidth="93.60000610351562" text="Họ và tên" />
+                        <TableColumn fx:id="colNgaySinhTTChiTietCongNhan" minWidth="-1.0" prefWidth="93.60000610351562" text="Ngày sinh" />
+                                    <TableColumn fx:id="colGioiTinhTTChiTietCongNhan" minWidth="-1.0" prefWidth="64.0" text="Giới tính" />
+                                    <TableColumn fx:id="colNgayVaoLamTTChiTietCongNha" minWidth="-1.0" prefWidth="98.4000244140625" text="Ngày vào làm" />
+                                    <TableColumn fx:id="colSoDienThoaiChiTieTTTCongNhan" minWidth="-1.0" prefWidth="108.00006103515625" text="Số điện thoại" />
+                                    <TableColumn fx:id="colEmailChiTietTTCongNhan" minWidth="-1.0" prefWidth="62.39996337890625" text="Email" />
+                                    <TableColumn fx:id="colSoTaiKhoanChiTietTTCongNhan" minWidth="-1.0" prefWidth="97.5999755859375" text="Só tài khoản" />
+                                    <TableColumn fx:id="colToSanXuatTTChiTietCongNhan" minWidth="-1.0" prefWidth="84.79998779296875" text="Tổ sản xuất" />
+                                    <TableColumn fx:id="colChucVuChiTietTTCongNhan" minWidth="-1.0" prefWidth="64.0" text="Chức vụ" />
+                                    <TableColumn fx:id="colPhuCapChiTietTTCongNhan" minWidth="-1.0" prefWidth="85.5999755859375" text="Phụ cấp" />
                                 </columns>
                             </TableView>
                         </content>
@@ -65,7 +63,7 @@
                     <HBox alignment="CENTER" spacing="10.0">
                         <children>
                             <Label text="Giới tính: " />
-                            <ComboBox prefHeight="26.0" prefWidth="70.0" />
+                            <ComboBox fx:id="cbxLoadGioiTinhTTCongNhan" prefHeight="26.0" prefWidth="70.0" />
                         </children>
                         <padding>
                             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -73,8 +71,8 @@
                     </HBox>
                     <HBox alignment="CENTER" spacing="10.0">
                         <children>
-                            <Label text="Chức vụ: " />
-                            <ComboBox prefHeight="26.0" prefWidth="125.0" />
+                            <Label text="Vai trò: " />
+                            <ComboBox fx:id="cbxLoadVaiTroTTCongNhan" prefHeight="26.0" prefWidth="125.0" />
                         </children>
                         <padding>
                             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -83,23 +81,17 @@
                     <HBox alignment="CENTER" spacing="10.0">
                         <children>
                             <Label text="Tổ sản xuất:" />
-                            <ComboBox prefHeight="26.0" prefWidth="183.0" />
+                            <ComboBox fx:id="cbxLoadToSanXuatTTCongNhan" prefHeight="26.0" prefWidth="183.0" />
                         </children>
                         <padding>
                             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                         </padding>
                     </HBox>
-                    <Button mnemonicParsing="false" text="Lấy dữ liệu ">
+                    <Button fx:id="btnLayDuLieuTTCongNhan" mnemonicParsing="false" text="Lấy dữ liệu ">
                         <HBox.margin>
                             <Insets />
                         </HBox.margin>
                     </Button>
-            <HBox alignment="CENTER" spacing="10.0">
-               <children>
-                  <Spinner />
-                  <Button mnemonicParsing="false" text="Thêm tổ sản xuất" />
-               </children>
-            </HBox>
                 </children>
                 <padding>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -117,7 +109,7 @@
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label text="Mã số công nhân" />
-                  <TextField disable="true" editable="false" prefHeight="26.0" prefWidth="210.0" />
+                  <TextField fx:id="tfMaSoTTCongNhan" disable="true" editable="false" prefHeight="26.0" prefWidth="210.0" />
                </children>
                <padding>
                   <Insets left="5.0" />
@@ -126,7 +118,7 @@
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label text="Tên công nhân" />
-                  <TextField prefHeight="26.0" prefWidth="227.0" />
+                  <TextField fx:id="tfTenTTCongNhan" prefHeight="26.0" prefWidth="227.0" />
                </children>
                <padding>
                   <Insets left="5.0" right="5.0" />
@@ -140,7 +132,7 @@
                   <HBox alignment="CENTER_LEFT" spacing="5.0">
                      <children>
                         <Label text="Giới tính: " />
-                        <CheckBox fx:id="ckGioiTinhTTNhanVien" mnemonicParsing="false" text="Nữ" />
+                        <CheckBox fx:id="ckGioiTinhTTCongNhan" mnemonicParsing="false" text="Nữ" />
                      </children>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -149,7 +141,7 @@
                   <HBox alignment="CENTER" spacing="10.0">
                      <children>
                         <Label text="Ngày sinh: " />
-                        <DatePicker />
+                        <DatePicker fx:id="datepickNgaySinhTTCongNhan" />
                      </children>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -160,7 +152,7 @@
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label text="Số điện thoại: " />
-                  <TextField prefHeight="26.0" prefWidth="172.0">
+                  <TextField fx:id="tfSoDienThoaiTTCongNhan" prefHeight="26.0" prefWidth="172.0">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -173,7 +165,7 @@
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label text="Email: " />
-                  <TextField prefHeight="26.0" prefWidth="214.0" />
+                  <TextField fx:id="tfEmailTTCongNhan" prefHeight="26.0" prefWidth="214.0" />
                </children>
                <padding>
                   <Insets left="5.0" right="5.0" />
@@ -182,7 +174,7 @@
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label text="Số tài khoản: " />
-                  <TextField alignment="BASELINE_LEFT" prefHeight="26.0" prefWidth="175.0" />
+                  <TextField fx:id="tfSoTaiKhoanTTCongNhan" alignment="BASELINE_LEFT" prefHeight="26.0" prefWidth="175.0" />
                </children>
                <padding>
                   <Insets left="5.0" right="5.0" />
@@ -191,7 +183,7 @@
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label text="Tổ" />
-                  <ComboBox prefHeight="26.0" prefWidth="183.0" />
+                  <ComboBox fx:id="cbxToSanXuatTTCongNhan" prefHeight="26.0" prefWidth="183.0" />
                </children>
                <padding>
                   <Insets left="5.0" right="5.0" />
@@ -200,7 +192,7 @@
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label text="Phụ cấp" />
-                  <ComboBox prefWidth="150.0" />
+                  <ComboBox fx:id="tfPhuCapTTCongNhan" prefWidth="150.0" />
                </children>
                <padding>
                   <Insets left="5.0" />
@@ -211,7 +203,7 @@
                   <HBox alignment="CENTER" spacing="10.0">
                      <children>
                         <Label text="Vai tró" />
-                        <ComboBox prefHeight="26.0" prefWidth="193.0" />
+                        <ComboBox fx:id="cbxVaiTroTTCongNhan" prefHeight="26.0" prefWidth="193.0" />
                      </children>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -228,7 +220,7 @@
                   <HBox alignment="CENTER" spacing="5.0">
                      <children>
                         <Label text="Ngày vào làm: " />
-                        <DatePicker HBox.hgrow="ALWAYS" />
+                        <DatePicker fx:id="datepickNgayVaoLamTTCongNhan" HBox.hgrow="ALWAYS" />
                      </children>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -238,7 +230,7 @@
             </HBox>
             <HBox alignment="CENTER" spacing="120.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Thêm">
+                  <Button fx:id="btnThemTTCongNhan" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Thêm">
                      <graphic>
                         <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -247,7 +239,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Làm mới">
+                  <Button fx:id="btnLamMoiTTCongNhan" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Làm mới">
                      <graphic>
                         <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -266,7 +258,7 @@
             </HBox>
             <HBox alignment="CENTER" spacing="120.0">
                <children>
-                  <Button fx:id="btnSuaTTNhanVien" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Sửa">
+                  <Button fx:id="btnSuaTTCongNhan" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Sửa">
                      <graphic>
                         <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -275,7 +267,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Xóa">
+                  <Button fx:id="btnXoaTTCongNhan" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Xóa">
                      <graphic>
                         <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -298,7 +290,7 @@
         <bottom>
             <HBox alignment="CENTER_RIGHT" fillHeight="false" spacing="20.0" BorderPane.alignment="CENTER">
                 <children>
-                    <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Reset">
+                    <Button fx:id="btnResetTTCongNhan" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Reset">
                         <graphic>
                             <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                 <image>
@@ -307,7 +299,7 @@
                             </ImageView>
                         </graphic>
                     </Button>
-                    <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Lưu">
+                    <Button fx:id="btnLuuTTCongNhan" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Lưu">
                         <graphic>
                             <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                 <image>
