--- a/src/main/resources/com/openjfx/qllspahg/fxml/NhanVien/QuanLyPhongBan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/NhanVien/QuanLyPhongBan.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 
 
-    <BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.NhanVienController">
+    <BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.QuanLyNhanVienController">
         <center>
             <ScrollPane fitToHeight="true" fitToWidth="true">
                 <content>
