Update DSHD, QLSP

--- a/src/main/resources/com/openjfx/qllspahg/fxml/SanPham.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/SanPham.fxml
@@ -21,7 +21,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<TabPane tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.SanPhamController">
+<TabPane tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.QuanLySanPhamController">
    <tabs>
       <Tab text="Quản lý sản phẩm">
          <content>
