--- a/src/main/resources/com/openjfx/qllspahg/fxml/SanPham/TimKiemSanPham.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/SanPham/TimKiemSanPham.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.Pane?>
 
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.SanPhamController">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.QuanLySanPhamController">
    <center>
       <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" nodeOrientation="LEFT_TO_RIGHT" BorderPane.alignment="CENTER">
          <bottom>
