--- a/src/main/resources/com/openjfx/qllspahg/fxml/SanPham/QuanLySanPham.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/SanPham/QuanLySanPham.fxml
@@ -131,7 +131,7 @@
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button maxWidth="200.0" mnemonicParsing="false" onAction="#sampleTest" prefWidth="150.0" text="Trống">
+                        <Button maxWidth="200.0" mnemonicParsing="false" onAction="#xemCongDoan" prefWidth="150.0" text="Xem công đoạn">
                            <graphic>
                               <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -160,7 +160,8 @@
                   <HBox alignment="CENTER_LEFT" spacing="10.0">
                      <children>
                         <Label text="Mã công đoạn:" HBox.hgrow="ALWAYS" />
-                        <TextField fx:id="tfMaCD" prefHeight="26.0" prefWidth="227.0" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="tfMaCD" editable="false" prefHeight="26.0" prefWidth="227.0" HBox.hgrow="ALWAYS" />
+                        <Button mnemonicParsing="false" onAction="#layMaCongDoan" text="Lấy mã" />
                      </children>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -191,7 +192,8 @@
                   <HBox alignment="CENTER_LEFT" spacing="10.0">
                      <children>
                         <Label text="Giai đoạn sản xuất:" HBox.hgrow="ALWAYS" />
-                        <ComboBox fx:id="cbxGiaiDoanCD" prefHeight="26.0" prefWidth="183.0" HBox.hgrow="ALWAYS" />
+                        <ComboBox fx:id="cbxGiaiDoanCD" onAction="#kiemTraComboBoxGiaiDoan" prefHeight="26.0" prefWidth="183.0" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="tfGiaiDoanKhacCD" prefHeight="26.0" prefWidth="172.0" />
                      </children>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -199,7 +201,7 @@
                   </HBox>
                   <HBox alignment="CENTER" spacing="50.0">
                      <children>
-                        <Button maxWidth="200.0" mnemonicParsing="false" onAction="#themCongDoan" prefWidth="150.0" text="Thêm sản phẩm">
+                        <Button maxWidth="200.0" mnemonicParsing="false" onAction="#themCongDoan" prefWidth="150.0" text="Thêm công đoạn">
                            <graphic>
                               <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -208,7 +210,7 @@
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button maxWidth="200.0" mnemonicParsing="false" onAction="#xoaCongDoanDuocChon" prefWidth="150.0" text="Xóa sản phẩm">
+                        <Button maxWidth="200.0" mnemonicParsing="false" onAction="#xoaCongDoanDuocChon" prefWidth="150.0" text="Xóa công đoạn">
                            <graphic>
                               <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -233,7 +235,7 @@
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button maxWidth="200.0" mnemonicParsing="false" onAction="#suaCongDoanDuocChon" prefWidth="150.0" text="Sửa sản phẩm">
+                        <Button maxWidth="200.0" mnemonicParsing="false" onAction="#suaCongDoanDuocChon" prefWidth="150.0" text="Sửa công đoạn">
                            <graphic>
                               <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
