--- a/src/main/resources/com/openjfx/qllspahg/fxml/NhanVien/TamUngNhanVien.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/NhanVien/TamUngNhanVien.fxml
@@ -13,15 +13,14 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-
-    <BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.TamUngNhanVienController">
+<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.TamUngNhanVienController">
         <top>
             <HBox alignment="CENTER_LEFT" prefWidth="1180.0" spacing="15.0" BorderPane.alignment="CENTER">
                 <children>
                     <HBox alignment="CENTER" spacing="10.0">
                         <children>
                             <Label text="Mã nhân viên" />
-                            <TextField prefHeight="26.0" prefWidth="152.0" />
+                            <TextField fx:id="tfMaNhanVien" prefHeight="26.0" prefWidth="152.0" />
                         </children>
                         <padding>
                             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -30,7 +29,7 @@
                     <HBox alignment="CENTER" spacing="10.0">
                         <children>
                             <Label text="Tên nhân viên" />
-                            <TextField prefHeight="26.0" prefWidth="152.0" />
+                            <TextField fx:id="tfTenNhanVien" prefHeight="26.0" prefWidth="152.0" />
                         </children>
                         <padding>
                             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -39,13 +38,13 @@
                     <HBox alignment="CENTER" prefHeight="30.0" prefWidth="270.0" spacing="10.0">
                         <children>
                             <Label text="Phòng ban: " />
-                            <ComboBox prefHeight="26.0" prefWidth="154.0" />
+                            <ComboBox fx:id="cbxPhongBan" prefHeight="26.0" prefWidth="154.0" />
                         </children>
                         <padding>
                             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                         </padding>
                     </HBox>
-                    <Button mnemonicParsing="false" text="Lấy dữ liệu " />
+                    <Button fx:id="btnLayDuLieu" mnemonicParsing="false" text="Lấy dữ liệu " />
                 </children>
                 <BorderPane.margin>
                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -55,15 +54,15 @@
         <center>
             <ScrollPane fitToHeight="true" fitToWidth="true" BorderPane.alignment="CENTER">
                 <content>
-                    <TableView editable="true" tableMenuButtonVisible="true">
+                    <TableView fx:id="tblviewTamUngNhanVien" editable="true" tableMenuButtonVisible="true">
                         <columns>
-                            <TableColumn prefWidth="135.99999696016312" text="Mã nhân viên" />
-                            <TableColumn prefWidth="187.99998474121094" text="Tên nhân viên" />
-                            <TableColumn prefWidth="188.00003051757812" text="Phòng ban" />
-                            <TableColumn prefWidth="137.5999755859375" text="Số ngày đã đi làm" />
-                            <TableColumn prefWidth="108.79998779296875" text="Ngày tạm ứng" />
-                            <TableColumn prefWidth="184.79998779296875" text="Số tiền tạm ứng" />
-                            <TableColumn prefWidth="247.20001220703125" text="Ghi chú" />
+                            <TableColumn fx:id="colMaNhanVien" prefWidth="135.99999696016312" text="Mã nhân viên" />
+                            <TableColumn fx:id="colTenNhanVien" prefWidth="187.99998474121094" text="Tên nhân viên" />
+                            <TableColumn fx:id="colPhpngBan" prefWidth="188.00003051757812" text="Phòng ban" />
+                            <TableColumn fx:id="colSoNgayDaDiLam" prefWidth="137.5999755859375" text="Số ngày đã đi làm" />
+                            <TableColumn fx:id="colNgayTamUng" prefWidth="108.79998779296875" text="Ngày tạm ứng" />
+                            <TableColumn fx:id="colSoTienTazmUng" prefWidth="184.79998779296875" text="Số tiền tạm ứng" />
+                            <TableColumn fx:id="colGhiChu" prefWidth="247.20001220703125" text="Ghi chú" />
                         </columns>
                     </TableView>
                 </content>
@@ -72,16 +71,7 @@
         <bottom>
             <HBox alignment="CENTER_RIGHT" fillHeight="false" spacing="100.0" BorderPane.alignment="CENTER">
                 <children>
-                    <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Reset">
-                        <graphic>
-                            <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
-                                <image>
-                                    <Image url="@../images/icons/reset-removebg-preview.png" />
-                                </image>
-                            </ImageView>
-                        </graphic>
-                    </Button>
-                    <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Tạm ứng">
+                    <Button fx:id="btnTamUng" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Tạm ứng">
                         <graphic>
                             <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                 <image>
